完善了上传页面的部分组件和功能

--- a/app.json
+++ b/app.json
@@ -10,8 +10,7 @@
     "pages/generate/generate",
     "pages/user/user",
     "pages/user/family/family",
-    "pages/user/child/child",
-    "pages/upload/upload"
+    "pages/user/child/child"
   ],
   "tabBar":{
     "color": "#666666",
