--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/generate/generate",
     "pages/user/user",
     "pages/user/family/family",
+    "pages/user/family/addmember/addmember",
     "pages/user/child/child"
   ],
   "tabBar":{
