feat(back): realize upload multiple images and invent img-management protocol

--- a/frontend/project.config.json
+++ b/frontend/project.config.json
@@ -33,6 +33,8 @@
     "minifyWXSS": true,
     "showES6CompileOption": false,
     "minifyWXML": true,
+    "ignoreDevUnusedFiles": false,
+    "ignoreUploadUnusedFiles": false,
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
