--- a/frontend/app.json
+++ b/frontend/app.json
@@ -14,7 +14,8 @@
     "pages/user/user",
     "pages/user/family/family",
     "pages/user/family/addmember/addmember",
-    "pages/user/child/child"
+    "pages/user/child/child",
+    "pages/user/child/addchild/addchild"
   ],
   "tabBar":{
     "color": "#666666",
