feat(both) text upload & detail ok

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -15,7 +15,8 @@
     "pages/user/family/family",
     "pages/user/family/addmember/addmember",
     "pages/user/child/child",
-    "pages/show/event_detail/event_detail"
+    "pages/show/event_detail/event_detail",
+    "pages/show/text_detail/text_detail"
   ],
   "tabBar": {
     "color": "#666666",
