fix(front): fix the bugs of missing card json and app json

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -9,12 +9,14 @@
     "pages/show/data/data",
     "pages/plan/plan",
     "pages/plan/todo/todo",
+    "pages/plan/create_plan/create_plan",
     "pages/generate/generate",
     "pages/generate/add_event/add_event",
     "pages/user/user",
     "pages/user/family/family",
     "pages/user/family/addmember/addmember",
     "pages/user/child/child",
+    "pages/user/child/addchild/addchild",
     "pages/show/event_detail/event_detail"
   ],
   "tabBar": {
