feat(front): remove navigator bar and tab bar(partly)

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -22,6 +22,7 @@
     "pages/show/text_detail/text_detail"
   ],
   "tabBar": {
+    "custom": true,
     "color": "#666666",
     "selectedColor": "#4095E5",
     "backgroundColor": "#ffffff",
