--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,17 @@
 {
   "devDependencies": {
     "@types/crypto-js": "^4.1.3"
-  }
+  },
+  "dependencies": {
+    "pdfjs-dist": "^4.0.189"
+  },
+  "name": "frontend",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
