--- a/frontend/app.json
+++ b/frontend/app.json
@@ -14,6 +14,7 @@
     "pages/generate/generate",
     "pages/generate/add_event/add_event",
     "pages/generate/chart/chart",
+    "pages/generate/timeline/timeline",
     "pages/user/user",
     "pages/user/family/family",
     "pages/user/family/addmember/addmember",
