--- a/frontend/app.json
+++ b/frontend/app.json
@@ -22,7 +22,8 @@
     "pages/user/child/addchild/addchild",
     "pages/show/event_detail/event_detail",
     "pages/show/text_detail/text_detail",
-    "pages/generate/preview/preview"
+    "pages/generate/preview/preview",
+    "pages/generate/reselect/diarytemplate/diarytemplate"
   ],
   "tabBar": {
     "color": "#666666",
