feat(front): add user sub-pages

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -22,6 +22,9 @@
     "pages/user/child/child",
     "pages/user/child/addchild/addchild",
     "pages/user/child/child_detail/child_detail",
+    "pages/user/setting/setting",
+    "pages/user/about_us/about_us",
+    "pages/user/comments/comments",
     "pages/show/event_detail/event_detail",
     "pages/show/text_detail/text_detail",
     "pages/show/data_detail/data_detail",
