--- a/frontend/project.private.config.json
+++ b/frontend/project.private.config.json
@@ -3,7 +3,8 @@
   "projectname": "Growth%20Snap",
   "setting": {
     "compileHotReLoad": true,
-    "urlCheck": false
+    "urlCheck": false,
+    "bigPackageSizeSupport": true
   },
   "libVersion": "3.2.1"
 }
