fix(back): nginx config to upload max 1024M file

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -45,6 +45,7 @@ services:
     volumes:
       # - static-volume:/code/build/
       - ./nginx:/etc/nginx/conf.d
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - .:/code
     depends_on:
       - app
