--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -33,9 +33,16 @@ services:
       - 8000
     depends_on:
       - db
+      - redis
     networks:
       - web_network
       - db_network   
+
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+
   nginx:
     container_name: nginx
     restart: always
