feat(back): add tests for register-related API

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ node_modules/
 frontend/project.config.json
 frontend/project.config.json
 backend/db.sqlite3
+backend/test_db
 frontend/project.config.json
 
 # Django
