--- a/.github/workflows/django-test.yaml
+++ b/.github/workflows/django-test.yaml
@@ -18,6 +18,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r backend/requirements.txt
+        wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.4/wkhtmltox-0.12.4_linux-generic-amd64.tar.xz && \
+        tar vxf wkhtmltox-0.12.4_linux-generic-amd64.tar.xz && \
+        cp wkhtmltox/bin/wk* /usr/bin/
     # 运行测试用例
     - name: Run tests
       run: |
