--- a/.github/workflows/django-test.yaml
+++ b/.github/workflows/django-test.yaml
@@ -20,7 +20,8 @@ jobs:
         pip install -r backend/requirements.txt
         wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.4/wkhtmltox-0.12.4_linux-generic-amd64.tar.xz && \
         tar vxf wkhtmltox-0.12.4_linux-generic-amd64.tar.xz && \
-        sudo cp wkhtmltox/bin/wk* /usr/bin/
+        sudo cp wkhtmltox/bin/wk* /usr/bin/ && \
+        pip install jieba -i http://pypi.douban.com/simple --trusted-host pypi.douban.com
         
     # 运行测试用例
     - name: Run tests
